force-app/main/default/objects/Game__c/Game__c.object-meta.xml
<CustomObject>
    <description>Gamification battleground/game header (BRD 20.1). Defines a game with team scope, period, KPIs and coin rewards for field-user leaderboards.</description>
    <label>Game (Battle Ground)</label>
    <nameField>
        <label>Game Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>