force-app/main/default/objects/Game__c/fields/Filter_Level__c.field-meta.xml
<CustomField>
    <fullName>Filter_Level__c</fullName>
    <description>Team-build filter (BRD 20.1: filter by level).</description>
    <label>Filter Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L4</fullName>
            </value>
            <value>
                <fullName>L5</fullName>
            </value>
            <value>
                <fullName>L6</fullName>
            </value>
            <value>
                <fullName>L7</fullName>
            </value>
            <value>
                <fullName>L8</fullName>
            </value>
            <value>
                <fullName>L9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>