force-app/main/default/objects/Game__c/fields/Filter_State__c.field-meta.xml
<CustomField>
    <fullName>Filter_State__c</fullName>
    <description>Team-build filter by State (BRD 20.1).</description>
    <label>Filter State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>