force-app/main/default/objects/Game__c/fields/Game_Code__c.field-meta.xml
<CustomField>
    <fullName>Game_Code__c</fullName>
    <description>External Id for migration/ERP mapping.</description>
    <externalId>true</externalId>
    <label>Game Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>