force-app/main/default/objects/Game__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A game can be deactivated (BRD 20.1).</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>