force-app/main/default/objects/Game__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <description>Battleground team this game is assigned to (BRD 20.1).</description>
    <label>Team Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>