force-app/main/default/objects/Game__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Daily</fullName><default>true</default><label>Daily</label></value>
            <value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>