force-app/main/default/objects/Game__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Start_Date__c)), NOT(ISBLANK(End_Date__c)), End_Date__c &lt; Start_Date__c)</errorConditionFormula>
    <errorMessage>Game End Date cannot be before Start Date.</errorMessage>
</ValidationRule>