force-app/main/default/objects/Game__c/listViews/Active_Games.listView-meta.xml
<ListView>
    <fullName>Active_Games</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Game__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Games</label>
    <columns>NAME</columns>
    <columns>Team_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Is_Active__c</columns>
</ListView>